Bug 143641 - UNO Object Inspector: No suitable title for the window
Summary: UNO Object Inspector: No suitable title for the window
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Amarjargal Gundjalam
URL:
Whiteboard: reviewed:2022 target:7.5.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on:
Blocks: UNO-Object-Inspector
  Show dependency treegraph
 
Reported: 2021-07-31 12:48 UTC by Hossein
Modified: 2022-11-18 21:44 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hossein 2021-07-31 12:48:30 UTC
Description:
When detaching the "UNO Object Inspector" window, the title is "LibreOfficeDev 7.3", and not anything related to the window

Steps to Reproduce:
1. Open LibreOffice Dev 7.3
2. Open "UNO Object Inspector" from "Tools > Development Tools" Menu
3. Detach the object inspector from the bottom of the window

Actual Results:
The window title is "LibreOfficeDev 7.3"

Expected Results:
The window title should be something like "Object Inspector"


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 1ec5a1300632a5455416b6cbb090d8c48353d939
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Dmitrii A 2021-08-01 03:30:11 UTC
Confirm in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ac80ec817eb07c77a51bc0729985a473c734182e
CPU threads: 16; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL
Comment 2 Xisco Faulí 2021-08-10 16:25:12 UTC
@Heiko, easyhack ?
Comment 3 Heiko Tietze 2021-08-19 08:57:17 UTC
Guess DockingWindows take the name from the deck inside, as it happens for the sidebar. The worse issue here is that you cannot dock the Inspector again (the sidebar has a hamburger menu with a respective menu entry). Any idea, Tomaz?
Comment 4 Hossein 2021-08-19 09:00:21 UTC
(In reply to Heiko Tietze from comment #3)
> Guess DockingWindows take the name from the deck inside, as it happens for
> the sidebar. The worse issue here is that you cannot dock the Inspector
> again (the sidebar has a hamburger menu with a respective menu entry). Any
> idea, Tomaz?

The re-docking is possible, but it very tricky. There is some specific point that on that point the window is docked again. It is harder in gtk frontend, and easier with X11.
Comment 5 Hossein 2021-12-02 15:18:41 UTC
Let's introduce this as an EasyHack.
Comment 6 Hossein 2021-12-02 16:05:59 UTC
> Guess DockingWindows take the name from the deck inside, as it happens for
> the sidebar.

@Heiko
The "UNO Object Inspector" does not have a title, even in the docked state. Do you think we should change it to something like the sidebar, and we set title for it, even in the docked state?
Comment 7 Hossein 2021-12-02 21:32:55 UTC
Code pointer:

If you look at 'sfx2/source/devtools/DevelopmentToolDockingWindow.cxx', you can set the appropriate title in the constructor of the 'DevelopmentToolDockingWindow' class.

Changing the title of the window when it is undocked is straightforward.
Comment 8 Heiko Tietze 2021-12-03 08:26:08 UTC
(In reply to Hossein from comment #6)
> The "UNO Object Inspector" does not have a title, even in the docked state.

Absolutely, I don't see why we should not title a UI element.

(In reply to Hossein from comment #4)
> The re-docking is possible, but it very tricky.

Close and reopen, it does not remember its last position/state (which is a bug itself).

Off-topic: Even worse is the Navigator (F5) that refuses to dock on kf5 (the sidebar has a menu with this function). See bug 113416 (we might close bug 81902), bug 134704, and bug 92122.
Comment 9 siddhant96044@gmail.com 2022-01-12 10:19:21 UTC
I will try to solve this easyHack , this would be my first contribution to LibreOffice
Comment 10 Hossein 2022-06-20 21:12:10 UTC
Re-evaluating the EasyHack in 2022

This enhancement is still relevant, as the "UNO Object Inspector" window still does not have a suitable title.
Comment 11 Amarjargal Gundjalam 2022-10-31 05:22:58 UTC
I'm an outreachy applicant. I've sent a patch for this.

https://gerrit.libreoffice.org/c/core/+/142053

This patch fixes only the window title as per the bug description. But this object inspector has many issues such as not having a title in docked state, difficulty in docking and others described in Bug 143341. I can continue to work on them in another patches.

Additionally, I think Tools->Development Tools was meant to be a menu, even with a single item. And the object inspector should be opened from Tools->Development Tools->UNO Object Inspector. I can try to work on this as well if this is an behavior that should be fixed.
Comment 12 Commit Notification 2022-11-04 08:58:34 UTC
Amarjargal Gundjalam committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/670fa33edd7c9da77d5cbed5c7978ef24df59f15

tdf#143641 Fix UNO Object Inspector window title

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Hossein 2022-11-18 21:02:19 UTC
Let's mark this bug as fixed, and work on the remaining problems in separate issues.