tdf#143641 Fix UNO Object Inspector window title

When detaching the "UNO Object Inspector" window, the title is "LibreOfficeDev 7.x",
and not anything related to the window. This change fixes the window title.

Change-Id: I3b7c3b547e59acd108b62a537ce7ff24162d745b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142053
Tested-by: Jenkins
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Hossein <hossein@libreoffice.org>
Reviewed-by: Hossein <hossein@libreoffice.org>